# duckdb-ui

./: .gitmodules  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml  TypeScriptWorkspace.yml
scripts/: setup-custom-toolchain.sh
src/: event_dispatcher.cpp  http_server.cpp  settings.cpp  state.cpp  ui_extension.cpp  watcher.cpp
src/include/: event_dispatcher.hpp  http_server.hpp  settings.hpp  state.hpp  ui_extension.hpp  version.hpp  watcher.hpp
src/include/utils/: encoding.hpp  env.hpp  helpers.hpp  md_helpers.hpp  serialization.hpp
src/utils/: encoding.cpp  env.cpp  helpers.cpp  md_helpers.cpp  serialization.cpp
test/sql/: ui.test
ts/: .gitignore  .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
ts/pkgs/duckdb-data-reader/: package.json
ts/pkgs/duckdb-data-reader/src/: AsyncDuckDBDataBatchIterator.ts  ColumnFilteredDuckDBData.ts  DuckDBData.ts  DuckDBDataReader.ts  DuckDBRow.ts  MemoryDuckDBData.ts  index.ts
ts/pkgs/duckdb-data-reader/test/: DuckDBDataReader.test.ts  tsconfig.json
ts/pkgs/duckdb-data-types/: package.json
ts/pkgs/duckdb-data-types/src/: DuckDBType.ts  DuckDBTypeId.ts  extensionTypes.ts  index.ts  parseLogicalTypeString.ts
ts/pkgs/duckdb-data-types/test/: DuckDBType.test.ts  parseLogicalTypeString.test.ts
ts/pkgs/duckdb-data-values/: package.json
ts/pkgs/duckdb-data-values/src/: DuckDBArrayValue.ts  DuckDBBitValue.ts  DuckDBBlobValue.ts  DuckDBDateValue.ts  DuckDBDecimalValue.ts  DuckDBIntervalValue.ts  DuckDBListValue.ts  DuckDBMapEntry.ts  DuckDBMapValue.ts  DuckDBStructEntry.ts  DuckDBStructValue.ts  DuckDBTimeTZValue.ts  DuckDBTimeValue.ts  DuckDBTimestampMicrosecondsValue.ts  DuckDBTimestampMillisecondsValue.ts  DuckDBTimestampNanosecondsValue.ts  DuckDBTimestampSecondsValue.ts  DuckDBTimestampTZValue.ts  DuckDBToStringOptions.ts  DuckDBUUIDValue.ts  DuckDBValue.ts  SpecialDuckDBValue.ts  index.ts  tsconfig.json
ts/pkgs/duckdb-data-values/src/conversion/: dateTimeStringConversion.ts  displayStringForDuckDBValue.ts  duckDBValueToSql.ts  getVarIntFromBytes.ts  hexFromBlob.ts  jsonFromDuckDBValue.ts  stringFromBlob.ts  stringFromDecimal.ts
ts/pkgs/duckdb-data-values/test/: DuckDBArrayValue.test.ts  DuckDBBitValue.test.ts  DuckDBBlobValue.test.ts  DuckDBDateValue.test.ts  DuckDBDecimalValue.test.ts  DuckDBIntervalValue.test.ts  DuckDBListValue.test.ts  DuckDBMapValue.test.ts  DuckDBStructValue.test.ts  DuckDBTimeTZValue.test.ts  DuckDBTimeValue.test.ts  DuckDBTimestampMicrosecondsValue.test.ts  DuckDBTimestampMillisecondsValue.test.ts  DuckDBTimestampNanosecondsValue.test.ts  DuckDBTimestampSecondsValue.test.ts  DuckDBTimestampTZValue.test.ts  DuckDBUUIDValue.test.ts
ts/pkgs/duckdb-data-values/test/conversion/: displayStringForDuckDBValue.test.ts  duckDBValueToSql.test.ts  getVarIntFromBytes.test.ts  jsonFromDuckDBValue.test.ts
ts/pkgs/duckdb-ui-client/: package.json
ts/pkgs/duckdb-ui-client/src/: index.ts
ts/pkgs/duckdb-ui-client/src/client/classes/: DuckDBUIClient.ts  DuckDBUIClientConnection.ts
ts/pkgs/duckdb-ui-client/test/helpers/: makeBuffer.ts  mockRequests.ts
(+38 files in other folders)
